<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.fragment.CharactersFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llCharactersTypeHeader"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/dark_gray_700">

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="@dimen/cardview_default_elevation">

            <ImageView
                android:id="@+id/ivCharactersTypeImage"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:contentDescription="@string/characters_type_image_content_description"
                tools:src="@drawable/ic_disney" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvCharactersTypeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            tools:text="Disney" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCharacters"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llCharactersTypeHeader"
        app:layout_constraintVertical_bias="0.0"
        app:spanCount="3"
        tools:itemCount="9"
        tools:listitem="@layout/item_character" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray_700"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioGroup
            android:id="@+id/rgCharacterType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbCharacterTypeDisney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/holo_green_light"
                android:padding="8dp"
                android:text="@string/character_type_disney"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rbCharacterTypeRickyAndMorty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/holo_green_light"
                android:padding="8dp"
                android:text="@string/character_type_ricky_and_morty"
                android:textColor="@color/white" />

        </RadioGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/pbLoadingCharacters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>